# Starry-Night-Project

./: .gitignore  docker-compose.yml  ~$開發日誌.docx
backend/: .env  Dockerfile  celerybeat-schedule  db.sqlite3  pyproject.toml  requirements.txt
backend/api/: admin.py  serializers.py  urls.py  views.py
backend/backend/: celery.py  settings.py  wsgi.py
frontend/: .env.production  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: error.tsx  layout.tsx  template.tsx
frontend/src/app/(auth)/redirect/: loading.tsx  page.tsx
frontend/src/app/(auth)/signin/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(site)/: page.tsx  template.tsx
frontend/src/app/(site)/event/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/component/auth/common/: errorfield.tsx  handlepassword.tsx  recaptcha-v2_btn.tsx  recaptcha-v3provider.tsx
frontend/src/component/auth/signin/: signinfields.tsx  signinform.tsx  signinformactions.tsx  signinformheader.tsx  signinpasswordfield.tsx
frontend/src/component/auth/signup/: signupfields.tsx  signupform.tsx  signupformactions.tsx  signupformheader.tsx  signuppasswordfield.tsx  validation.tsx
frontend/src/component/navbar/sidenavbar/: sidenavbar.tsx
frontend/src/component/navbar/topnavbar/: topnavbar.tsx
frontend/src/component/navbar/topnavbar/items/: breadcrumbsnav.tsx  dashboard.tsx  mobliedrawer.tsx  navbarcontent.tsx  navitems.tsx  stickyappbar.tsx
nginx/: nginx.conf
